--- a/SG PSI Readings/Storyboards/Base.lproj/Main.storyboard
+++ b/SG PSI Readings/Storyboards/Base.lproj/Main.storyboard
@@ -49,31 +49,31 @@
             </objects>
             <point key="canvasLocation" x="1042.0289855072465" y="122.54464285714285"/>
         </scene>
-        <!--Settings View Controller-->
+        <!--Settings-->
         <scene sceneID="J9B-6y-aWH">
             <objects>
-                <viewController id="W4G-Wy-CJS" customClass="SettingsViewController" customModule="SG_PSI_Readings" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController title="Settings" id="W4G-Wy-CJS" customClass="SettingsViewController" customModule="SG_PSI_Readings" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="t0d-dd-gp9">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="808"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <datePicker contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="dateAndTime" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="cGl-0V-LYP">
-                                <rect key="frame" x="20" y="181" width="374" height="216"/>
-                                <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMaxY="YES"/>
+                            <datePicker contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" datePickerMode="dateAndTime" minuteInterval="1" translatesAutoresizingMaskIntoConstraints="NO" id="cGl-0V-LYP">
+                                <rect key="frame" x="63" y="106" width="288" height="216"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="288" id="ESF-SL-FFd"/>
+                                </constraints>
                                 <date key="date" timeIntervalSinceReferenceDate="584965794.99058199">
                                     <!--2019-07-16 10:29:54 +0000-->
                                 </date>
                             </datePicker>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Set date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pkU-P9-0fA">
-                                <rect key="frame" x="166" y="145" width="83" height="28"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Set date" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pkU-P9-0fA">
+                                <rect key="frame" x="166" y="46" width="83" height="28"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="23"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="w5n-so-PZA">
-                                <rect key="frame" x="184" y="464" width="67" height="36"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxY="YES"/>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="w5n-so-PZA">
+                                <rect key="frame" x="173.5" y="356" width="67" height="36"/>
                                 <color key="backgroundColor" red="0.0" green="0.50196081400000003" blue="0.50196081400000003" alpha="1" colorSpace="calibratedRGB"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                 <state key="normal" title="Refresh">
@@ -85,15 +85,24 @@
                             </button>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="pkU-P9-0fA" firstAttribute="top" secondItem="0hs-b0-JOB" secondAttribute="top" constant="38" id="5r8-qQ-OEf"/>
+                            <constraint firstItem="cGl-0V-LYP" firstAttribute="top" secondItem="pkU-P9-0fA" secondAttribute="bottom" constant="40" id="On1-R5-inG"/>
+                            <constraint firstItem="cGl-0V-LYP" firstAttribute="centerX" secondItem="0hs-b0-JOB" secondAttribute="centerX" id="SmR-QE-gzs"/>
+                            <constraint firstItem="w5n-so-PZA" firstAttribute="centerX" secondItem="0hs-b0-JOB" secondAttribute="centerX" id="aUi-Un-QbM"/>
+                            <constraint firstItem="pkU-P9-0fA" firstAttribute="centerX" secondItem="0hs-b0-JOB" secondAttribute="centerX" id="l8o-eG-hDP"/>
+                            <constraint firstItem="w5n-so-PZA" firstAttribute="top" secondItem="cGl-0V-LYP" secondAttribute="bottom" constant="34" id="pzl-0i-NOn"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="0hs-b0-JOB"/>
                     </view>
+                    <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" translucent="NO" prompted="NO"/>
                     <connections>
                         <outlet property="dtPicker" destination="cGl-0V-LYP" id="WuV-t3-sI7"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="YWK-q0-EVx" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1985.5072463768117" y="122.54464285714285"/>
+            <point key="canvasLocation" x="1983.75" y="122.53521126760563"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="IjL-BO-HpT">
